--- a/test/pc/e2e/BUILD.gn
+++ b/test/pc/e2e/BUILD.gn
@@ -183,6 +183,7 @@ if (rtc_include_tests) {
     deps = [
       ":encoded_image_data_injector_api",
       ":id_generator",
+      ":media_dump_manager",
       ":quality_analyzing_video_decoder",
       ":quality_analyzing_video_encoder",
       ":simulcast_dummy_buffer_helper",
@@ -193,6 +194,7 @@ if (rtc_include_tests) {
       "../../../api/video:video_frame",
       "../../../api/video:video_rtp_headers",
       "../../../api/video_codecs:video_codecs_api",
+      "../../../rtc_base:criticalsection",
       "../../../test:video_test_common",
       "../../../test:video_test_support",
       "//third_party/abseil-cpp/absl/memory",
@@ -258,6 +260,19 @@ if (rtc_include_tests) {
     ]
   }
 
+  rtc_library("media_dump_manager") {
+    visibility = [ "*" ]
+    testonly = true
+    sources = [
+      "media/media_dump_manager.cc",
+      "media/media_dump_manager.h",
+    ]
+    deps = [
+      "../..:video_test_support",
+      "../../../api:peer_connection_quality_test_fixture_api",
+    ]
+  }
+
   rtc_library("media_helper") {
     visibility = [ "*" ]
     testonly = true
@@ -267,12 +282,12 @@ if (rtc_include_tests) {
       "media/test_video_capturer_video_track_source.h",
     ]
     deps = [
+      ":media_dump_manager",
       ":test_peer",
       ":video_quality_analyzer_injection_helper",
       "../..:fileutils",
       "../..:platform_video_capturer",
       "../..:video_test_common",
-      "../..:video_test_support",
       "../../../api:create_frame_generator",
       "../../../api:frame_generator_api",
       "../../../api:peer_connection_quality_test_fixture_api",
@@ -338,6 +353,7 @@ if (rtc_include_tests) {
       ":analyzer_helper",
       ":default_audio_quality_analyzer",
       ":default_video_quality_analyzer",
+      ":media_dump_manager",
       ":media_helper",
       ":peer_configurer",
       ":peer_connection_quality_test_params",
